--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "@types/node": "^22.13.13",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
