--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@tailwindcss/vite": "^4.0.15",
     "@types/node": "^22.13.13",
     "axios": "^1.8.4",
@@ -22,7 +24,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
-    "tailwindcss": "^4.0.15"
+    "swr": "^2.3.3",
+    "tailwindcss": "^4.0.15",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
