--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-indiana-drag-scroll": "^2.2.1",
     "react-router-dom": "^7.4.0",
     "swr": "^2.3.3",
     "zustand": "^5.0.3"
