--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "clsx": "^2.1.1",
     "gh-pages": "^6.3.0",
     "react": "^19.0.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-indiana-drag-scroll": "^2.2.1",
     "react-router-dom": "^7.4.0",
     "swr": "^2.3.3",
