--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-indiana-drag-scroll": "^2.2.1",
     "react-router-dom": "^7.4.0",
