--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "types": ["vite-plugin-svgr/client"]
+    "types": ["vite-plugin-svgr/client"],
   }
 }
