--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "gh-pages": "^6.3.0",
+    "jotai": "^2.12.2",
     "react": "^19.0.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^19.0.0",
