--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "gh-pages": "^6.3.0",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.1.0",
     "jotai": "^2.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^7.4.0",
     "swr": "^2.3.3",
     "zod": "^3.24.3"
